[package]
name = "gugu"
version = "0.1.0"
description = "Learning Bevy for 3D"
authors = ["Ofer Sadan <ofersadan85@gmail.com>"]
repository = "https://github.com/ofersadan85/gugu"
license = "Unlicense"
edition = "2021"
publish = false

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = ["bevy_pbr", "bevy_winit", "tonemapping_luts"]}
